# mdmake

./: CLAUDE.md  README.md  generate-icons.js  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: amp.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: converter.ts
